# stuff-server

./: Cargo.toml  README.md
src/: echo.rs  event.rs  lib.rs  main.rs  net.rs  network.rs  ocr.rs  p2p.rs  p2p_chat.rs  screen.rs  tcp.rs  tray.rs  zip.rs
src/screens/: clock.rs  daily_report.rs  mod.rs  report.rs  results.rs  settings.rs
