[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
image = "0.24.7"
rdev = "0.5.3"
rusty-tesseract = "1.1.7"
screenshots = "0.8.3"
tray-icon = "0.9.0"
zip = "0.6.6"

[target.'cfg(target_os = "windows")'.dependencies]
winit = "0.28"
winapi = { version = "0.3", features = ["winuser", "errhandlingapi", "processthreadsapi"] }
